<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="comp3350.courser.presentation.WorkspaceActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="489dp"
        android:layout_height="407dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createScheduleButton"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.288" />

    <Button
        android:id="@+id/createNewCourseButton"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:onClick="buttonNewCourseOnClick"
        android:text="@string/create_course"
        app:layout_constraintBaseline_toBaselineOf="@+id/createScheduleButton"
        app:layout_constraintStart_toEndOf="@+id/createScheduleButton" />


</androidx.constraintlayout.widget.ConstraintLayout>
