...
    <string name="course_term">Term</string>
    <string name="course_year">Year</string>
    <string name="course_credit_hours">Credit Hours</string>
    <string name="course_name_hint">Software Engineering</string>
    <string name="course_code_hint">COMP3350</string>
    <string name="course_department_hint">Computer Science</string>
    <string name="course_term_hint">Summer</string>
    <string name="course_year_hint">2021</string>
    <string name="course_credit_hours_hint">3</string>
    <!-- Strings used for New Section page -->
    <string name="section_crn">Section CRN</string>
    <string name="lab_crn">Lab CRN</string>
    <string name="section_code">Section Code</string>
...
